--- a/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
@@ -22,17 +22,20 @@
             <!-- Products list -->
             <div class="flex flex-inline overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row pb-4">
-                <div  class="col-lg-4">
-                    <div id="chart" class=" mt-0 py-3 shadow-sm border">
-                        <apx-chart
-                        [series]="chartOptions.series"
-                        [chart]="chartOptions.chart"
-                        [labels]="chartOptions.labels"
-                        [title]="chartOptions.title"
-                        [theme]="chartOptions.theme"
-                        [responsive]="chartOptions.responsive"
-                      ></apx-chart>
-                    </div>
+                <div  class="col-lg-6">
+            <div class="shadow-sm border">
+                <div id="chart" class=" mt-0 py-3 shadow-sm border">
+                    <apx-chart
+                    [series]="chartOptions.series"
+                    [chart]="chartOptions.chart"
+                    [labels]="chartOptions.labels"
+                    [title]="chartOptions.title"
+                    [theme]="chartOptions.theme"
+                    [responsive]="chartOptions.responsive"
+                  ></apx-chart>
+                </div>
+                </div>
+
                 </div>
                </div>
                <div class="row">
