--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -9,27 +9,33 @@
       <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
           <div  class="col-lg-6 py-3">
-            <div id="chart" class=" m-0 pt-2 shadow-sm border">
-              <apx-chart
-                  [series]="chartOptions.series"
-                  [chart]="chartOptions.chart"
-                  [labels]="chartOptions.labels"
-                  [title]="chartOptions.title"
-                  [theme]="chartOptions.theme"
-                  [responsive]="chartOptions.responsive"
-                ></apx-chart>
+            <div class="shadow-sm border">
+              <div id="chart" class=" m-0 pt-2">
+                <apx-chart
+                    [series]="chartOptions.series"
+                    [chart]="chartOptions.chart"
+                    [labels]="chartOptions.labels"
+                    [title]="chartOptions.title"
+                    [theme]="chartOptions.theme"
+                    [responsive]="chartOptions.responsive"
+                  ></apx-chart>
+                </div>
               </div>
+
+
           </div>
           <div  class="col-lg-6 py-3">
-            <div id="chart" class=" m-0 pt-2  shadow-sm border">
-              <apx-chart
-                  [series]="chartOptions.series"
-                  [chart]="chartOptions.chart"
-                  [labels]="chartOptions.labels"
-                  [title]="chartOptions.title"
-                  [theme]="chartOptions.theme"
-                  [responsive]="chartOptions.responsive"
-                ></apx-chart>
+            <div class="shadow-sm border">
+              <div id="chart" class=" m-0 pt-2">
+                <apx-chart
+                    [series]="chartOptions.series"
+                    [chart]="chartOptions.chart"
+                    [labels]="chartOptions.labels"
+                    [title]="chartOptions.title"
+                    [theme]="chartOptions.theme"
+                    [responsive]="chartOptions.responsive"
+                  ></apx-chart>
+                </div>
               </div>
           </div>
           </div>
