--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -38,41 +38,50 @@
       <!-- Products list -->
       <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
-          <div  class="col-lg-4">
-            <div id="chart" class=" mt-0 py-3 shadow-sm border">
-              <apx-chart
-                  [series]="chartOptions.series"
-                  [chart]="chartOptions.chart"
-                  [labels]="chartOptions.labels"
-                  [title]="chartOptions.title"
-                  [theme]="chartOptions.theme"
-                  [responsive]="chartOptions.responsive"
-                ></apx-chart>
+          <div  class="col-lg-6">
+            <div class="shadow-sm border">
+              <div id="chart" class=" mt-0 py-3">
+                <apx-chart
+                    [series]="chartOptions.series"
+                    [chart]="chartOptions.chart"
+                    [labels]="chartOptions.labels"
+                    [title]="chartOptions.title"
+                    [theme]="chartOptions.theme"
+                    [responsive]="chartOptions.responsive"
+                  ></apx-chart>
+                </div>
               </div>
+
           </div>
-          <div  class="col-lg-4">
-            <div id="chart" class=" mt-0 py-3 shadow-sm border">
-              <apx-chart
-                  [series]="chartOptions.series"
-                  [chart]="chartOptions.chart"
-                  [labels]="chartOptions.labels"
-                  [title]="chartOptions.title"
-                  [theme]="chartOptions.theme"
-                  [responsive]="chartOptions.responsive"
-                ></apx-chart>
+          <div  class="col-lg-6">
+            <div class="shadow-sm border">
+              <div id="chart" class=" mt-0 py-3">
+                <apx-chart
+                    [series]="chartOptions.series"
+                    [chart]="chartOptions.chart"
+                    [labels]="chartOptions.labels"
+                    [title]="chartOptions.title"
+                    [theme]="chartOptions.theme"
+                    [responsive]="chartOptions.responsive"
+                  ></apx-chart>
+                </div>
               </div>
+
           </div>
-          <div  class="col-lg-4">
-            <div id="chart" class=" mt-0 py-3 shadow-sm border">
-              <apx-chart
-                  [series]="chartOptions.series"
-                  [chart]="chartOptions.chart"
-                  [labels]="chartOptions.labels"
-                  [title]="chartOptions.title"
-                  [theme]="chartOptions.theme"
-                  [responsive]="chartOptions.responsive"
-                ></apx-chart>
+          <div  class="col-lg-6 mt-3">
+            <div class="shadow-sm border">
+              <div id="chart" class=" mt-0 py-3">
+                <apx-chart
+                    [series]="chartOptions.series"
+                    [chart]="chartOptions.chart"
+                    [labels]="chartOptions.labels"
+                    [title]="chartOptions.title"
+                    [theme]="chartOptions.theme"
+                    [responsive]="chartOptions.responsive"
+                  ></apx-chart>
+                </div>
               </div>
+
           </div>
           </div>
             <div class="row">
