--- a/src/app/modules/customer/submit-documents/submit-documents.component.html
+++ b/src/app/modules/customer/submit-documents/submit-documents.component.html
@@ -19,10 +19,28 @@
         <div class="col-lg-3">
             <mat-form-field appearance="outline">
                 <mat-label>Description</mat-label>
-                <input matInput type="text" id="general_description"
+                <input matInput type="text"
                        class="mat-input-element"/>
             </mat-form-field>
         </div>
+        <div class="col-lg-3">
+            <mat-form-field appearance="outline">
+                <mat-label>Reference No.</mat-label>
+                <input matInput type="text" (change)="changeTypeData($event.target.value,'reference')">
+            </mat-form-field>
+        </div>
+        <div class="col-lg-3">
+            <mat-form-field appearance="outline">
+                <mat-label class="customMatLabel">Select Document Type
+                </mat-label>
+                <mat-select id="document_type" (change)="changeDocumentType($event.target.value)">
+                    <mat-option *ngFor="let obj of document_types?.LOVs" [value]="obj.Value">
+                        {{obj.Name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
     </div>
 
 
@@ -31,7 +49,7 @@
             <div class="col-lg-3 align-self-center">
                 <input type="file" accept="image/png, image/jpg, image/jpeg" appearance="outline"
                        (change)="onFileChange($event, i)"/>
-                <div class="shadow-sm mt-2"  style="width: 240px; position: relative;">
+                <div class="shadow-sm mt-2" style="width: 240px; position: relative;">
                     <img [src]="doc_urls[i]" (click)="previewImg(doc_urls[i])">
                 </div>
 
@@ -43,27 +61,12 @@
                     <input matInput type="text" id="description_{{i}}"/>
                 </mat-form-field>
             </div>
-            <div class="col-lg-3 align-self-center">
-                <mat-form-field appearance="outline">
-                    <mat-label>Reference No.</mat-label>
-                    <input matInput type="text" id="reference_{{i}}"/>
-                </mat-form-field>
-            </div>
-            <div class="col-lg-3 align-self-center">
-                <mat-form-field appearance="outline">
-                    <mat-label class="customMatLabel">Select Document Type
-                    </mat-label>
-                    <mat-select id="document_type_{{i}}" [(value)]="documents[i]">
-                        <mat-option *ngFor="let obj of document_types?.LOVs" [value]="obj.Value">
-                            {{obj.Name}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
         </div>
 
 
     </div>
 
-    <button mat-flat-button class="bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="submitDocuments()">Submit</button>
+    <button mat-flat-button class="bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+            (click)="submitDocuments()">Submit
+    </button>
 </div>
