--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -53,7 +53,7 @@
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <img src="../../../../assets/images/ic_possible_customer_lead.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class=" text-black">Possible Customer Leads</p>
+                    <p class=" text-black">Possible Customer/Business Leads</p>
                 </div>
             </mat-card>
         </div>
@@ -65,9 +65,9 @@
                       id="llcInquiryText" (click)="click(4)">
                 <count [count]="nIlt" *ngIf="nIlt  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
-                    <img src="../../../../assets/images/ic_text_msg.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
+                    <img src="../../../../assets/images/ic_loan_defaulters.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class=" text-black">Intimate the Loaner via Text</p>
+                    <p class=" text-black">SAM Npl Loans</p>
                 </div>
             </mat-card>
         </div>
@@ -121,20 +121,18 @@
             </mat-card>
         </div>
 
-        <div class="col-lg-4 col-sm-12">
-            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
-                <count [count]="nBl" *ngIf="nBl  != undefined"></count>
-                <div class="d-grid" style="justify-items: center;">
-                    <img src="../../../../assets/images/ic_business_leads.PNG" class="img-responsive center-block w-12 mx-auto mb-3"
-                    alt="icon"/>
-                    <p class=" text-black">Business Leads</p>
-                </div>
-            </mat-card>
-        </div>
-    </div>
+<!--        <div class="col-lg-4 col-sm-12">-->
+<!--            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"-->
+<!--                      id="llcInquiryText">-->
+<!--                <count [count]="nBl" *ngIf="nBl  != undefined"></count>-->
+<!--                <div class="d-grid" style="justify-items: center;">-->
+<!--                    <img src="../../../../assets/images/ic_business_leads.PNG" class="img-responsive center-block w-12 mx-auto mb-3"-->
+<!--                    alt="icon"/>-->
+<!--                    <p class=" text-black">Business Leads</p>-->
+<!--                </div>-->
+<!--            </mat-card>-->
+<!--        </div>-->
 
-    <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
@@ -146,15 +144,18 @@
                 </div>
             </mat-card>
         </div>
+    </div>
+
+    <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
 
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <count [count]="nLDef" *ngIf="nLDef  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
-                    <img src="../../../../assets/images/ic_loan_defaulters.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
-
-                    <p class=" text-black">Loan Defaulters</p>
+                    <img src="../../../../assets/images/ic_text_msg.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
+                    <p class=" text-black">Intimate the Loaner via Text</p>
+                    <!--                    <p class=" text-black">Loan Defaulters</p>-->
                 </div>
             </mat-card>
         </div>
