--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -132,7 +132,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-2" >
+    <div class="row mt-2" id="collapseExample">
         <div class="col-lg-12 text-right">
             <button class="ml-2 bg-green" mat-raised-button color="primary" (click)="save()"><mat-icon class="mr-2">save</mat-icon>Save</button>
             <button class="ml-2" mat-raised-button color="primary" (click)="submit()"><mat-icon class="mr-2">check_circle</mat-icon>Submit</button>
