--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -5,7 +5,7 @@
     <div class="pt-3" [formGroup]="targetForm">
         <div class="row">
 
-            <div class="col-lg-4 col-sm-12">
+            <div class="col-lg-3 col-sm-12">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label>Select Duration</mat-label>
                     <mat-select #sel (selectionChange)="OnChange(sel.value)" formControlName="Duration">
@@ -18,7 +18,7 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mb-2">
@@ -56,7 +56,7 @@
                         <ng-container>
                             <td></td>
                             <td></td>
-                            <td *ngFor="let head of assignedtargetheading" class="p-4">
+                            <td *ngFor="let head of assignedtargetheading" class="p-2">
                                 {{head}}
                             </td>
     
@@ -76,7 +76,7 @@
                     <tr *ngFor="let row of targets; let rowIndex = index; trackBy: tracker">
                         <ng-container *ngFor="let key of rowKeys; trackBy: tracker">
                             <td *ngIf="key!='Id'">
-                                <div style="width: 200px;">
+                                <div class="target-input" style="width: 200px;">
                                     <div *ngIf="key=='Name'">
     <!--                                <div class="mat-form-field-fluid" appearance="outline">-->
     <!--                                    <input matInput readonly disabled-->
@@ -117,7 +117,7 @@
                     <tr *ngIf="totals">
                         <ng-container>
                             <td></td>
-                            <td *ngFor="let a of totals" class="p-4">
+                            <td *ngFor="let a of totals" class="p-2">
                                 {{a}}
                             </td>
     
