--- a/src/app/modules/loan/referback-loan-from-orr/referback-loan-uti.component.html
+++ b/src/app/modules/loan/referback-loan-from-orr/referback-loan-uti.component.html
@@ -154,7 +154,7 @@
 <!--                                    <mat-icon style="margin-left: 5px;" title="View Loan">visibility</mat-icon>-->
 <!--                                </button>-->
                                 <button mat-icon-button color="primary" (click)="editLoan(loan)"
-                                        *ngIf="!CheckEditStatus(loan)">
+                                        *ngIf="CheckEditStatus(loan)">
                                     <mat-icon style="margin-left: 5px;" title="View Loan">edit</mat-icon>
                                 </button>
                                 <button mat-icon-button color="primary" (click)="ViewOrr(loan)">
