--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -37,6 +37,8 @@
 
 
           </div>
+          </div>
+          <div class="row">
           <div  class="col-lg-6 col-sm-12 my-2">
             <div class="shadow-sm border">
               <div id="chart"  class="mt-0 py-3">
@@ -54,6 +56,7 @@
           </div>
 
         </div>
+ 
         <div class="row ">
           <div  class="col-lg-4 table-responsive">
             <p class="heading mb-2 text-lg">Disbursement</p>
