--- a/src/app/modules/loan/rejected-loan/rejected-loan.component.html
+++ b/src/app/modules/loan/rejected-loan/rejected-loan.component.html
@@ -168,7 +168,25 @@
 
                         <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
                     </mat-table>
-                    <div class="mat-table__message" *ngIf="dataSource.data.length==0">No records found</div>
+<!--                    <div class="mat-table__message" *ngIf="dataSource.data.length==0">No records found</div>-->
+                </div>
+
+                <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
+                    <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
+                    Items per page:
+                    <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                                style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+                        <mat-option [value]="5">5</mat-option>
+                        <mat-option [value]="10">10</mat-option>
+                        <mat-option [value]="25">25</mat-option>
+                        <mat-option [value]="50">50</mat-option>
+                    </mat-select>
+                    <button (click)="paginate(1)">First</button>
+                    <pagination-controls display="inline" (pageChange)="paginate($event)"
+                                         style="display: inline-block;"></pagination-controls>
+                    <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
+                    <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+
                 </div>
 
             </div>
