get legal heirs cnic

--- a/src/app/modules/reports/get-customer-legal-heirs/get-customer-legal-heirs.component.html
+++ b/src/app/modules/reports/get-customer-legal-heirs/get-customer-legal-heirs.component.html
@@ -85,6 +85,16 @@
                 matSortDirection="asc"
                 matSortDisableClear
             >
+                <ng-container matColumnDef="Cnic">
+                    <mat-header-cell *matHeaderCellDef
+                    >Cnic
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.Cnic
+                        }}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="Credit">
                     <mat-header-cell *matHeaderCellDef
                     >Credit Limit
