--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -67,7 +67,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_loan_defaulters.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class=" text-black">SAM Npl Loans</p>
+                    <p class=" text-black">Defaulters For Recovery Payment (SAM & NPL)</p>
                 </div>
             </mat-card>
         </div>
