--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -42,7 +42,7 @@
     <div class="row">
         <div  class="col-lg-12">
 
-            <div class="table-responsive overflow-auto" [style.height]="gridHeight" >
+            <div class="table-responsive overflow-auto" id="map_canvas" >
                 <table class="table table-striped" >
     
                     <thead  *ngIf="assignedtargetheading?.length>0">
@@ -132,7 +132,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-2" id="collapseExample">
+    <div class="row mt-2">
         <div class="col-lg-12 text-right">
             <button class="ml-2 bg-green" mat-raised-button color="primary" (click)="save()"><mat-icon class="mr-2">save</mat-icon>Save</button>
             <button class="ml-2" mat-raised-button color="primary" (click)="submit()"><mat-icon class="mr-2">check_circle</mat-icon>Submit</button>
