--- a/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
+++ b/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
@@ -150,12 +150,8 @@
                         <ng-container matColumnDef="Action">
                             <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
                             <mat-cell *matCellDef="let loan">
-<!--                                <button mat-icon-button color="primary" (click)="editLoan(loan)"-->
-<!--                                        *ngIf="CheckEditStatus(loan)">-->
-<!--                                    <mat-icon style="margin-left: 5px;" title="View Loan">visibility</mat-icon>-->
-<!--                                </button>-->
                                 <button mat-icon-button color="primary" (click)="editLoan(loan)"
-                                        *ngIf="!CheckEditStatus(loan)">
+                                        *ngIf="CheckEditStatus(loan)">
                                     <mat-icon style="margin-left: 5px;" title="View Loan">edit</mat-icon>
                                 </button>
                                 <button mat-icon-button color="primary" (click)="ViewOrr(loan)">
