--- a/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
+++ b/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
@@ -23,6 +23,7 @@
             <div class="kt-form">
                 <div class="kt-portlet__body">
                     <div class="row">
+                        <div  [class]="!accountDetailFetched?'col-lg-12':'col-lg-8'">
                         <div class="flex pl-2 pt-1" style="flex-wrap: wrap;">
 
                             <app-zone-branch-circle [form]="RecoveryForm" [should_show_circle]="false"
@@ -399,16 +400,55 @@
 
 
                         </div>
+                        <div class="row mx-2">
+                            <div class="col-lg-12">
+                                <div class="form-group kt-form__group">
+                                    <button style="background-color: #01671B;" *ngIf="isSimpleRecovery" mat-raised-button
+                                            color="primary"
+                                            (click)="save()"
+                                            [disabled]="submitted || viewOnly || dataSaved">
+                                        <!--                        [disabled]="submitted || transactionEdit || viewOnly || dataSaved"-->
+                                        <mat-icon class="mr-2">save</mat-icon>
+                                        Save
+                                    </button>
+                    
+                                    <button mat-raised-button color="primary" class="ml-2" (click)="makeAndSubmit()"
+                                            [disabled]="submitted || viewOnly || ibDisSave">
+                                        <mat-icon class="mr-2">check_circle</mat-icon>
+                                        {{submitButtonText}}</button>
+                    
+                    
+                                    <button mat-raised-button color="primary" class="ml-2" (click)="deleteRecovery()"
+                                            [disabled]="submitted || viewOnly || ibDisSave" *ngIf="isEditMode || dataSaved">
+                                        <mat-icon class="mr-2">delete_forever</mat-icon>
+                                        Delete
+                                    </button>
+                    
+                    
+                                    <button mat-raised-button
+                                            class="ml-2 mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                                            (click)="clearForm()"
+                                            [disabled]="submitted || transactionEdit || viewOnly || dataSaved">
+                                        <mat-icon class="mr-2"> clear_all</mat-icon>
+                                        Clear
+                                    </button>
+                    
+                    
+                                    <!--<button mat-raised-button color="primary" class="ml-2">Delete</button>-->
+                                </div>
+                    
+                            </div>
+                        </div>
 
-
-                        <div class="col-lg-5">
-                            <table class="table table-striped table-bordered" *ngIf="accountDetailFetched">
+                    </div>
+                        <div class="col-lg-4 pt-2 pr-20" *ngIf="accountDetailFetched">
+                            <table class="table table-striped table-bordered" >
                                 <thead>
                                 <tr class="table-header-background">
                                     <th colspan="2">Acount Detail</th>
                                 </tr>
                                 </thead>
-                                <tbody>
+                                <tbody >
                                 <tr>
                                     <td>Customer</td>
                                     <td>{{accountDetail.CustomerName}}</td>
@@ -502,43 +542,7 @@
             </div>
         </form>
 
-        <div class="col-lg-12">
-            <div class="form-group kt-form__group">
-                <button style="background-color: #01671B;" *ngIf="isSimpleRecovery" mat-raised-button
-                        color="primary"
-                        (click)="save()"
-                        [disabled]="submitted || viewOnly || dataSaved">
-                    <!--                        [disabled]="submitted || transactionEdit || viewOnly || dataSaved"-->
-                    <mat-icon class="mr-2">save</mat-icon>
-                    Save
-                </button>
 
-                <button mat-raised-button color="primary" class="ml-2" (click)="makeAndSubmit()"
-                        [disabled]="submitted || viewOnly || ibDisSave">
-                    <mat-icon class="mr-2">check_circle</mat-icon>
-                    {{submitButtonText}}</button>
-
-
-                <button mat-raised-button color="primary" class="ml-2" (click)="deleteRecovery()"
-                        [disabled]="submitted || viewOnly || ibDisSave" *ngIf="isEditMode || dataSaved">
-                    <mat-icon class="mr-2">delete_forever</mat-icon>
-                    Delete
-                </button>
-
-
-                <button mat-raised-button
-                        class="ml-2 mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                        (click)="clearForm()"
-                        [disabled]="submitted || transactionEdit || viewOnly || dataSaved">
-                    <mat-icon class="mr-2"> clear_all</mat-icon>
-                    Clear
-                </button>
-
-
-                <!--<button mat-raised-button color="primary" class="ml-2">Delete</button>-->
-            </div>
-
-        </div>
 
 
         <div class="col-lg-12 mt-6" *ngIf="RecoveryLoanTransaction">
