--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -278,7 +278,10 @@ body.light .mat-select-disabled .mat-select-value, body .light .mat-select-disab
 }
 }
 
-
+#map_canvas {
+    height: calc(100vh - 220px);
+    overflow: auto;
+}
 button {
     box-shadow: none;
 }
