--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,9 @@ $MaterialIcons_FontPath: "~material-icons-font/fonts";
 body {
     font-family: 'Poppins', sans-serif !important;
 }
+.space-between{
+    justify-content: space-between;
+}
 .mat-tab-group .mat-tab-header .mat-tab-label-container .mat-tab-list .mat-tab-labels .mat-tab-label.mat-tab-label-active {
     --tw-bg-opacity: 1 !important;
     background-color: #01671B !important;
